--- a/index.html
+++ b/index.html
@@ -2,55 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <main>
     <div class="container">
-      <div>
-        <h2>Join our community</h2>
-        <span>30-day, hassle-free money back guarantee</span>
-        <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+      <div class="community">
+        <h2 class="community__title">Join our community</h2>
+        <span class="community__sub-heading">30-day, hassle-free money back guarantee</span>
+        <p class="community__content">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
       </div>
-      <div>
-        <h2>Monthly Subscription</h2>
-        <span><span>&dollar;29</span> per month</span>
-        <span>Full access for less than &dollar;1 a day</span>
-        <a href="#">Sign Up</a>
+      <div class="subscription">
+        <h2 class="subscription__title">Monthly Subscription</h2>
+        <span class="subscription__price">&dollar;29<span class="subscription__value"> per month</span></span>
+        <span class="subscription__content">Full access for less than &dollar;1 a day</span>
+        <a href="#" class="subscription__button">Sign Up</a>
       </div>
-      <div>
-        <h2>Why Us</h2>
-        <ul>
-          <li>
-            <a href="">Tutorials by industry experts</a>
+      <div class="recommendation">
+        <h2 class="recommendation__title">Why Us</h2>
+        <ul class="recommentation__links">
+          <li class="recommendation__link-container">
+            <a class="recommendation__link" href="">Tutorials by industry experts</a>
           </li>
-          <li>
-            <a href="">Peer &amp; expert code review</a>
+          <li class="recommendation__link-container">
+            <a class="recommendation__link" href="">Peer &amp; expert code review</a>
           </li>
-          <li>
-            <a href="">Coding exercises</a>
+          <li class="recommendation__link-container">
+            <a class="recommendation__link" href="">Coding exercises</a>
           </li>
-          <li>
-            <a href="">Access to our GitHub repos</a>
+          <li class="recommendation__link-container">
+            <a class="recommendation__link" href="">Access to our GitHub repos</a>
           </li>
-          <li>
-            <a href="">Community forum</a>
+          <li class="recommendation__link-container">
+            <a class="recommendation__link" href="">Community forum</a>
           </li>
-          <li>
-            <a href="">Flashcard decks</a>
+          <li class="recommendation__link-container">
+            <a class="recommendation__link" href="">Flashcard decks</a>
           </li>
-          <li>
-            <a href="">New videos every week</a>
+          <li class="recommendation__link-container">
+            <a class="recommendation__link" href="">New videos every week</a>
           </li>
         </ul>
       </div>
