--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
       </div>
       <div class="subscription">
         <h2 class="subscription__title">Monthly Subscription</h2>
-        <span class="subscription__price">&dollar;29<span class="subscription__value"> per month</span></span>
-        <span class="subscription__content">Full access for less than &dollar;1 a day</span>
+        <div class="subscription__price-container">
+          <span class="subscription__price">&dollar;29<span class="subscription__value"> per month</span></span>
+          <span class="subscription__content">Full access for less than &dollar;1 a day</span>
+        </div>
         <a href="#" class="subscription__button">Sign Up</a>
       </div>
       <div class="recommendation">
         <h2 class="recommendation__title">Why Us</h2>
-        <ul class="recommentation__links">
+        <ul class="recommendation__links">
           <li class="recommendation__link-container">
             <a class="recommendation__link" href="">Tutorials by industry experts</a>
           </li>
